Fix css code overflow and add select code button

--- a/src/main.css
+++ b/src/main.css
@@ -202,16 +202,15 @@ article pre {
   counter-reset: line;
   background-color: #222222;
   border: 1px solid #404040;
-  padding: 0;
-  margin-top: 1rem;
-  overflow-y: auto;
   line-height: 1.15;
 }
 
 article pre code {
-  padding: .5rem;
-  margin: 0;
+  display: block;
+  padding: .65rem .5rem;
   font-size: 0.8em;
+  overflow-x: auto;
+  margin-top: 0;
 }
 
 article pre code .cl:after {
